--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
     <groupId>com.flora</groupId>
     <artifactId>LeetCode</artifactId>
     <version>1.0-SNAPSHOT</version>
-<!--    <dependencies>-->
+    <dependencies>
 <!--        <dependency>-->
 <!--            <groupId>com.google.protobuf</groupId>-->
 <!--            <artifactId>protobuf-java</artifactId>-->
 <!--            <version>3.6.1</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.netty</groupId>-->
-<!--            <artifactId>netty-all</artifactId> &lt;!&ndash; Use 'netty-all' for 4.0 or above &ndash;&gt;-->
-<!--            <version>4.0.56.Final</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
-<!--    </dependencies>-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+            <version>4.0.56.Final</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     
 </project>
