--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.flora</groupId>
     <artifactId>LeetCode</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>8</java.version>
+    </properties>
     <dependencies>
 <!--        <dependency>-->
 <!--            <groupId>com.google.protobuf</groupId>-->
